# result

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: ResultConfig.cmake  SuperBuild.cmake
include/: CMakeLists.txt
include/result/: result.hpp  traits.hpp
setup/: CMakeLists.txt
tests/: CMakeLists.txt  result_tests.cpp
